# plugins-ng

./: Example.hs  Filter.hs  Filter2.hs  Plugins.hs  README.md  plugins-ng.cabal
