name:                plugins-ng
version:             0.1.0.0
synopsis:            automatic, dynamic code recompilation and reloading
-- description:
homepage:            https://github.com/Happstack/plugins-ng
license:             BSD3
license-file:        LICENSE
author:              Jeremy Shaw
maintainer:          jeremy@n-heptane.com
copyright:           2014, Jeremy Shaw
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
extra-source-files:  Filter.hs Filter2.hs

library
  exposed-modules:     Plugins
  -- other-modules:
  other-extensions:    OverloadedStrings, TemplateHaskell
  build-depends:       base             >= 4.6 && < 4.7,
                       containers       >= 0.5 && < 0.6,
                       fsnotify         >= 0.0 && < 0.1,
                       ghc              >= 7.6 && < 7.7,
                       ghc-paths        >= 0.1 && < 0.2,
                       stm              >= 2.4 && < 2.5,
                       system-filepath  >= 0.4 && < 0.5,
                       template-haskell >= 2.8 && < 2.9,
                       th-lift          >= 0.6 && < 0.7
  -- hs-source-dirs:
  default-language:    Haskell2010

executable example
  main-is:             Example.hs
  build-depends:       base             >= 4.6 && < 4.7,
                       containers       >= 0.5 && < 0.6,
                       fsnotify         >= 0.0 && < 0.1,
                       ghc              >= 7.6 && < 7.7,
                       ghc-paths        >= 0.1 && < 0.2,
                       stm              >= 2.4 && < 2.5,
                       system-filepath  >= 0.4 && < 0.5,
                       template-haskell >= 2.8 && < 2.9,
                       th-lift          >= 0.6 && < 0.7

  default-language:    Haskell2010
